--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -245,7 +245,7 @@
                                 </strong>
                             </td>
                             {# First Author #}
-                            {{ res|resource_first_author }}
+                            <td>{{ res|resource_first_author }}</td>
 
                             {# Date Created #}
                             <td>{{ res.created|date:"M d, Y" }} at {{ res.created|time }}</td>
