--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -626,7 +626,7 @@
                                                 </strong>
                                             </td>
                                             {# First Author #}
-                                            {{ res|resource_first_author }}
+                                            <td>{{ res|resource_first_author }}</td>
                                             {# Date Created #}
                                             <td>{{ res.created|date:"d M, Y" }} {{ res.created|time }}</td>
                                             {# Last Modified #}
