--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -62,7 +62,7 @@
                                    data-toggle="tooltip" data-placement="top"
                                    :title="identifierAttributes[key].title">
 
-                                    <img v-if="key === 'ResearchGateID'" class="hover-shadow"
+                                    <img v-if="key === 'ResearcherID'" class="hover-shadow"
                                          src="{{ STATIC_URL }}img/researcherID.png"
                                          alt="ResearcherID icon"/>
 
@@ -70,8 +70,7 @@
                                 </a>
 
                                 <a v-else :href="identifier" class="identifier-icon" target="_blank"
-                                   data-toggle="tooltip"
-                                   data-placement="top"
+                                   data-toggle="tooltip" data-placement="top"
                                    :title="key">
                                     <i class="fa fa-address-card hover-shadow"></i>
                                 </a>
