--- a/hs_core/templates/pages/my-communities.html
+++ b/hs_core/templates/pages/my-communities.html
@@ -111,16 +111,23 @@
                         {%  if inactive_groups %}
                             <div class="row">
                                 <div class="col-sm-9 col-xs-9">
-                                    <h4>Groups that I am in</h4>
+                                    <h4>Communities that I am in</h4>
                                 </div>
                                 <div class="col-sm-3 col-xs-3" style="margin-top: 10px; text-align: right">
                                     <a id="show-deleted-groups" href="#" data-toggle="collapse" data-target="#deleted-groups">Show deleted groups</a>
                                 </div>
                             </div>
                         {% else %}
-                            <h4>Groups that I am in</h4>
+                            <h4>Communities that I am in</h4>
                         {% endif %}
                         <hr class="solid">
+                        {% for c in communities_list|default_if_none:'' %}
+                            {{ c.name }} {{ c.id  }}<br />
+                            Debug information - group listing<br />
+                            {{ c.member_groups }}
+                        {% endfor %}
+                            Debug information - group listing
+                            {{ community_members}}
                         {% if groups %}
                             <table class="groups-table">
                                 {% for group in groups %}
@@ -195,7 +202,7 @@
                             </table>
                         {%  endif %}
                         {% if not groups and not inactive_groups %}
-                            <i>You have not joined any groups.</i>
+{#                            TODO NOTE THAT NOT MEMBER OF ANY COMMUNITIES#}
                         {% endif %}
                     </div>
                 </div>
