Make public groups viewable without login

--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -6,7 +6,7 @@
         <title>Topics</title>
     </head>
     <body>
-    <div id="app">
+    <div id="topics-app">
         <template>
             <ul>
                 <li v-for="number in numbers">
