--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -109,32 +109,23 @@
                         <div data-hs-person-type="hs_user">
                             <div class="modal-body">
                                 {{ add_view_hs_user_form.user }}
+
+                                <div v-if="addAuthorError" class="alert alert-danger space-top">
+                                    ${addAuthorError}
+                                </div>
                             </div>
 
-{#                            <form action="/hsapi/_internal/{{ cm.short_id }}/creator/add-metadata/" method="POST"#}
-{#                                  enctype="multipart/form-data">#}
-{#                                {% csrf_token %}#}
-{#                                <input name="resource-mode" type="hidden" value="edit">#}
+                            <div class="modal-footer">
+                                <button :disabled="isAddingAuthor" type="button"
+                                        class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button @click="addAuthorExistingUser"
+                                        :disabled="isAddingAuthor"
+                                    type="button" class="btn btn-primary">
+                                    <template v-if="isAddingAuthor">Saving Changes...</template>
+                                    <template v-else>Save Changes</template>
 
-{#                                <div class="modal-body" style="display:none;">#}
-{#                                    <input maxlength="100" name="name" type="text">#}
-{#                                    <input name="description" type="text">#}
-{#                                    <input name="organization" type="text">#}
-{#                                    <input name="email" type="email">#}
-{#                                    <input maxlength="250" name="address" type="text">#}
-{#                                    <input maxlength="25" name="phone" type="text">#}
-{#                                    <input maxlength="200" name="homepage" type="url">#}
-{#                                    <div id="identifiers"></div>#}
-{#                                </div>#}
-
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                    <button @click="addAuthorExistingUser"
-                                        type="button" class="btn btn-primary">
-                                        Save Changes
-                                    </button>
-                                </div>
-{#                            </form>#}
+                                </button>
+                            </div>
                         </div>
 
                         {# Other Person #}
