--- a/theme/templates/includes/author-preview.html
+++ b/theme/templates/includes/author-preview.html
@@ -18,7 +18,7 @@
                             <tr v-if="is_person && author.profileUrl">
                                 <td class="text-center"><i class="fa fa-user-circle" aria-hidden="true"></i></td>
                                 <th>HydroShare Profile: </th>
-                                <td><a data-profileurl :href="author.profileUrl">View Profile</a></td>
+                                <td><a :href="author.profileUrl">View Profile</a></td>
                             </tr>
                             <tr>
                                 <td class="text-center"><i class="fa fa-building" aria-hidden="true"></i></td>
