Update script imports

--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -91,12 +91,9 @@
         let topics = JSON.parse("{{ topics_json }}");
     </script>
 {#    <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script> this is for the edit part TODO move this#}
-    <script src="{{ STATIC_URL }}js/jquery-1.11.2-min.js"></script>
+{#    <script src="{{ STATIC_URL }}js/jquery-1.11.2-min.js"></script>#}
     <script src="{{ STATIC_URL }}js/Sortable.min.js"></script>
     <script src="{{ STATIC_URL }}js/vue-mover.js"></script>
     <script src="{{ STATIC_URL }}js/dual-listbox.js"></script>
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/js/bootstrap-select.min.js"></script>
 
 {% endblock %}
