Add filter to author listing in view mode Code cleanup

--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -11,7 +11,7 @@
                         <a v-for="(author, index) in authors" data-toggle="modal"
                            @click="selectAuthor(author, index)"
                            data-target="#view-author-modal">
-                            <template v-if="author.name">${ author.name }</template>
+                            <template v-if="author.name">${ author.name | nameWithoutCommas }</template>
                             <template v-else>${ author.organization }</template>
                         </a>
                     </td>
