--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -3,7 +3,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Topics</title>
+        <title>Title Assistant</title>
     </head>
     <body>
     {#        <div id="topics-app">#}
@@ -30,8 +30,11 @@
     {#    </div>#}
     {#    <hr/>#}
     <div id="title-assistant" style="padding: 10px;">
+        Title:<br/>
+        <input id="resource-title" v-model="title" size="400"/><br/>
+
         Region:
-        <select id="czselect" v-model="regionSelected" @change="updateRegion()">
+        <select id="czselect" v-model="regionSelected" @change="updateTitle()">
             <option disabled value="">Critical Zone Region</option>
             <option>BCCZO</option>
             <option>CCZO</option>
@@ -46,20 +49,22 @@
         </select><br/>
 
         <div class="container" style="margin-top: 80px">
-
-            <mover :left-items="vm.unselectedItems" :right-items="vm.selectedItems"
+            Topics:<br/>
+            <mover :left-items="topics.unselectedItems" :right-items="topics.selectedItems"
                    title-left="Available Items" title-right="Selected Items"
                    moved-item-location="bottom"
                    v-on:item-moved="itemMoved"
                    v-cloak>
             </mover>
-            <hr/>
-            <button class="btn btn-primary" @click="saveItems()">Show Selected Items</button>
+{#            <hr/>#}
+{#            <button class="btn btn-primary" @click="saveItems()">Show Selected Items</button>#}
 
-            <h3>Bound and updated model values</h3>
-            {% templatetag openvariable %} vm.unselectedItems {% templatetag closevariable %}
-            {% templatetag openvariable %} vm.selectedItems {% templatetag closevariable %}
+{#            <h3>Bound and updated model values</h3>#}
+{#            {% templatetag openvariable %} vm.unselectedItems {% templatetag closevariable %}#}
+{#            {% templatetag openvariable %} topics.selectedItems {% templatetag closevariable %}#}
         </div>
+        Subtopic:<br/>
+        <input id="resource-subtopic" v-model="subtopic" v-on:keyup="updateTitle()"/>
     </div>
     </body>
     </html>
@@ -88,7 +93,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/vue-2.6.10-dev.js"></script>
     <script type="application/javascript">
         // contents here are required by topics.js
-        let topics = JSON.parse("{{ topics_json }}");
+        let topics_from_page = JSON.parse("{{ topics_json }}");
     </script>
 {#    <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script> this is for the edit part TODO move this#}
 {#    <script src="{{ STATIC_URL }}js/jquery-1.11.2-min.js"></script>#}
